<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="br.ufgd.adipometro.MainActivity">

    <item
        android:id="@+id/action_calculo"
        android:icon="@drawable/ic_format_superscript"
        android:title="@string/action_calculo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ufgd"
        android:icon="@drawable/ic_web"
        android:title="@string/action_ufgd"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_fotos"
        android:icon="@drawable/ic_camera_white_48dp"
        android:title="@string/action_fotos"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_fale_conosco"
        android:icon="@drawable/ic_headphones_white_48dp"
        android:title="@string/action_false_conosco"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_ajuda"
        android:icon="@drawable/ic_help_white_48dp"
        android:title="@string/action_ajuda"
        app:showAsAction="never"
        android:checkable="false"
        android:enabled="false" />

    <item
        android:id="@+id/action_sobre"
        android:icon="@drawable/ic_information"
        android:title="@string/action_sobre"
        app:showAsAction="never" />

</menu>