<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.06"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center_horizontal"
            android:text="@string/action_false_conosco"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="normal|bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_vazia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/assunto"
            android:textColor="@color/red" />

        <Spinner
            android:id="@+id/spAssunto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/categoria_assunto"
            android:popupBackground="@color/grey"
            android:prompt="@string/categoria" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/string_vazia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="@string/descricao"
            android:textColor="@color/red" />

        <EditText
            android:id="@+id/edDescricao"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_margin="3dp"
            android:layout_weight="2.46"
            android:background="@drawable/edittext_bg"
            android:fontFamily="serif"
            android:inputType="textMultiLine"
            android:textAlignment="viewStart"
            android:textColor="?attr/colorPrimaryDark" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="10dp"
            android:text="@string/string_vazia"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/btFaleConosco"
            android:layout_width="86dp"
            android:layout_height="86dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/fundo"
            android:elevation="6dp"
            android:stateListAnimator="@null"
            android:text="Enviar"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </LinearLayout>

</ScrollView>